--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,8 +1,5 @@
-- name: Setup Hugo
-    uses: peaceiris/actions-hugo@v2
-    with:
-      hugo-version: '0.79.1'
-      # extended: true
+- name: Hugo setup
+  uses: peaceiris/actions-hugo@v2.4.13
 
   - name: Build
     run: hugo --minify
