--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "theme/hello-friend-ng"]
-	path = theme/hello-friend-ng
+[submodule "themes/hello-friend-ng"]
+	path = themes/hello-friend-ng
 	url = git@github.com:cnegrich/hugo-theme-hello-friend-ng.git
